Added Loding Component

--- a/src/Components/quiz.css
+++ b/src/Components/quiz.css
@@ -57,7 +57,7 @@
 
 #username{
     width: 30%;
-    padding: 1%;
+    padding: .2%;
     border-radius: 9px;
     font-size: x-large;
     padding-left: 3%;
