--- a/src/Components/quiz.css
+++ b/src/Components/quiz.css
@@ -172,4 +172,16 @@
         left: 0%;
     
     }
+
+    .quiz-header{
+        background-color: black;
+        height: 10%;
+        width: 100%;
+        padding: 1%;
+        text-align: left;
+        padding-left: 10%;
+        padding-right: 50%;
+        margin-bottom: 2%;
+        display: flex;
+    }
   }
